why stop at just the table? customized ALL the scrollbars

--- a/src/frontend/src/public/styles/general.scss
+++ b/src/frontend/src/public/styles/general.scss
@@ -1,4 +1,19 @@
 * {
+  &::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+  &::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 5px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background: #888;
+  }
   box-sizing: border-box;
 }
 
